Refactor: extract config, engine packages and unify trade execution
Break up the 893-line cmd/bot/main.go monolith into focused packages:
- internal/config: Config struct, Load(), Validate(), named constants
- internal/engine: Engine struct with polling loop, unified trade
  executor (eliminates ~130 lines of duplicated game/prop logic),
  and ticker mapping. Uses log/slog for structured logging.
- internal/alerts: DRY cooldown helper replaces repeated lock pattern

Also fixes stale documentation (fee formula was "1.2%", now actual
dynamic formula), updates .env.example with all missing vars, and
fixes clone URL in README.

main.go: 893 → 154 lines.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,26 @@
 # balldontlie.io API key (GOAT tier required for odds)
 BALLDONTLIE_API_KEY=your_goat_tier_key
 
+# Kalshi API key authentication (required for trade execution)
+KALSHI_API_KEY_ID=your_kalshi_api_key_id
+KALSHI_API_KEY_PATH=/path/to/private_key.pem  # Local dev: file path
+KALSHI_PRIVATE_KEY=                            # Cloud: paste RSA key content
+KALSHI_DEMO=false                              # Use demo API
+
 # EV threshold - minimum expected value after fees to alert (3% = 0.03)
 EV_THRESHOLD=0.03
-
-# Kalshi average trading fee percentage (1.2% = 0.012)
-KALSHI_FEE_PCT=0.012
 
 # Kelly criterion fraction (0.25 = quarter Kelly for conservative sizing)
 KELLY_FRACTION=0.25
 
-# Poll interval in milliseconds (100ms = 10 req/sec = 600 req/min)
-POLL_INTERVAL_MS=100
+# Trade execution settings
+AUTO_EXECUTE=false                # Auto-execute trades on Kalshi
+MAX_SLIPPAGE_PCT=0.02             # Max acceptable slippage (2%)
+MIN_LIQUIDITY_CONTRACTS=10        # Min order book depth
+MAX_BET_DOLLARS=0                 # Max bet size per trade (0 = no cap)
+
+# Poll interval in milliseconds (2000ms = 1 poll/2s)
+POLL_INTERVAL_MS=2000
 
 # SQLite database path
 DB_PATH=/data/positions.db
